End with cookies  user-authorization

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/gonzoibox/Server-with-Node.js#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4"
   }
 }
